--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <link rel="icon" type="image/png" href="/Logo/Sublogo PNG Transparente.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prontivus - Medical Clinic Management System</title>
     <meta name="description" content="Modern SaaS medical system for multi-clinic management" />
